feat: Swagger for auth module
